--- a/Online shopping/styles.css
+++ b/Online shopping/styles.css
@@ -70,6 +70,11 @@ article {
     width: 75%;
 }
 
+.columns {
+    display: flex;
+
+}
+
 /* for desktops */
 @media only screen and (min-width: 768px) {
 
@@ -80,9 +85,47 @@ article {
     aside {
         margin-left: 2%;
     }
+
+    .columns-desktop{
+        display: flex;
+    }
 }
 
+.pie {
+    width: 200px;
+    padding: 10px;
+    margin: 10px;
+    background-color: #fff;
+    border: solid 1px #ccc;
+}
 
+.pie img {
+    width: 100%;
+}
+
+.pie .title {
+    font-weight: bold;
+}
+
+.pie .columns {
+    width: 100%;
+}
+
+.pie .price {
+    text-align: right;
+}
+
+.pie .columns div {
+    width: 50%;
+}
+
+.pie button {
+    background-color: #f6aeae;
+    padding: 10px;
+    border: solid 1px #f6aeae;
+    border-radius: 3px;
+    color: #fff;
+}
 
 
 
